--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "gumga-security-embedded",
+  "version": "1.0.1",
   "description": "Segurança Embutido da Gumga",
   "main": "index.js",
   "authors": [
