--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-front-base",
-  "version": "1.0.2",
+  "name": "gumga-security-embedded",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "devDependencies": {
